# pingbot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.production  Makefile  README.md  app.cabal  build.sh  checks.json  metrics.json
scrapers/: addcheck  constant.py  statusio.py  statusio_mean.py
src/: Config.hs  Fetcher.hs  Main.hs  Metrics.hs  Notifier.hs  StatusioMetrics.hs
